# SharkShell

./: .gitignore  .sharkshellrc  CMakeLists.txt  README.md  SharkShell  SharkShell.cbp  TODO  TODO.md
includes/: ConfFile.hpp  Ncurses.hpp  SharkAlias.hpp  SharkBuiltIn.hpp  SharkEnv.hpp  SharkException.hpp  SharkExec.hpp  SharkParser.hpp  SharkRc.hpp  SharkShell.hpp
includes/Shared/: FileAccess.cpp  Match.cpp  MobyDick.h  SplitLines.cpp
srcs/: ConfFile.cpp  Main.cpp  Ncurses.cpp  SharkAlias.cpp  SharkBuiltIn.cpp  SharkBuiltInCd.cpp  SharkBuiltInEnv.cpp  SharkEnv.cpp  SharkExec.cpp  SharkParser.cpp  SharkRc.cpp  SharkShell.cpp
